on removing hover effect

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
             border-radius: 10px;
             color:white;
         }
-        #what:hover{
+        /* #what:hover{
             content: "";
             background-color: orange;
             color: red;
         }
         #what:hover{
-            width: 50px;
+            width: 50px; */
         }
     </style>
 </head>
 <body class="bg-warning">
     
-    <div class="continer-fluid position-relative">
+    <div class="continer-fluid">
         
         <div style="position:fixed; bottom: 25px; left: 0px;"class="whatsapp  m-3 p-0" >
             <a href="https://wa.me/917396128940"><button id="what" class="bi bi-whatsapp fs-1 bg-success"></button></a>
