on adding marquee tag

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body class="bg-warning">
     
     <div class="continer-fluid">
+        <marquee class="display-1 text-dark">Social Media Integration</marquee>
         
         <div style="position:fixed; bottom: 25px; left: 0px;"class="whatsapp  m-3 p-0" >
             <a href="https://wa.me/917396128940"><button id="what" class="bi bi-whatsapp fs-1 bg-success"></button></a>
