--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <marquee class="display-1 text-dark">Social Media Integration</marquee>
         
         <div style="position:fixed; bottom: 25px; left: 0px;"class="whatsapp  m-3 p-0" >
-            <a href="https://wa.me/917396128940"><button id="what" class="bi bi-whatsapp btn btn-dark fs-1 bg-success"></button></a>
+            <a href="https://wa.me/917396128940"><button id="what" class="bi bi-whatsapp btn btn-dark fs-1 bg-success">Message Us</button></a>
         </div>
         <div class="text-center">
 
             <button class="btn btn-warning text-center">Sri Hari Muppori</button>
         </div>
         <div style="position:fixed; bottom: 25px; right: 0px;"class="phone m-3 p-0">
-            <a href="tel:+917396128940"><button class="bi bi-telephone btn btn-dark fs-1 bg-danger"></button></a>
+            <a href="tel:+917396128940"><button class="bi bi-telephone btn btn-dark fs-1 bg-danger">Call Us</button></a>
         </div>
         
     </div>
