on doing some modifications

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         #what:hover{
             width: 50px; */
         
+            .whatsapp button:hover,.phone button:hover{
+                content: "";
+                width: 200px;
+                background: red !important;
+            }
     </style>
 </head>
 <body class="bg-warning">
@@ -36,10 +41,10 @@
         </div>
         <div class="text-center">
 
-            <button style="color:red;font-size: 40px;" class="btn btn-warning text-center">Jambugolam Dilli Babu</button>
+            <button style="color:red;font-size: 40px;" class="btn btn-info text-center">Jambugolam Dilli Babu</button>
         </div>
         <div style="position:fixed; bottom: 25px; right: 0px;"class="phone m-3 p-0">
-            <a href="tel:+917396128940"><button class="bi bi-telephone btn btn-dark fs-1 bg-danger"></button></a>
+            <a href="tel:+917396128940"><button class="bi bi-telephone btn btn-dark fs-1 bg-primary"></button></a>
         </div>
         
     </div>
