--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="text-center">
 
-            <button style="color:red;font-size: 40px;" class="btn btn-info text-center">Jambugolam Dilli Babu</button>
+            <button style="color:red;font-size: 40px;" class="btn btn-info text-center">Chandragiri Rupesh Chandra</button>
         </div>
         <div style="position:fixed; bottom: 25px; right: 0px;"class="phone m-3 p-0">
             <a href="tel:+917396128940"><button class="bi bi-telephone btn btn-dark fs-1 bg-primary"></button></a>
