on applying transition

--- a/index.html
+++ b/index.html
@@ -15,20 +15,15 @@
         .whatsapp button, .phone button{
             border-radius: 10px;
             color:white;
+            transition-duration: 3s;
         }
-        /* #what:hover{
-            content: "";
-            background-color: orange;
-            color: red;
-        }
-        #what:hover{
-            width: 50px; */
+
         
-            .whatsapp button:hover,.phone button:hover{
-                content: "";
-                width: 200px;
-                background: red !important;
-            }
+        .whatsapp button:hover,.phone button:hover{
+            content: "";
+            background: red !important;
+            transform: rotate(90deg);
+        }
     </style>
 </head>
 <body class="bg-warning">
@@ -39,6 +34,9 @@
         <div style="position:fixed; bottom: 25px; left: 0px;"class="whatsapp  m-3 p-0" >
             <a href="https://wa.me/917396128940"><button id="what" class="bi bi-whatsapp btn btn-dark fs-1 bg-success"></button></a>
         </div>
+
+       
+
         <div class="text-center">
 
             <button style="color:red;font-size: 40px;" class="btn btn-info text-center">Chandragiri Rupesh Chandra</button>
